pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprTwoScopes/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Gryffindor) dst: (tag = Web and tag = Gryffindor) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Hufflepuff) dst: (tag = Web and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Slytherin) dst: (tag = Web and tag = Slytherin) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Gryffindor) dst: (tag = Web and tag = Gryffindor) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Hufflepuff) dst: (tag = Web and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Slytherin) dst: (tag = Web and tag = Slytherin) conn: All Connections'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Gryffindor) dst: (tag = App and tag = Gryffindor) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Hufflepuff) dst: (tag = App and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-7
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Slytherin) dst: (tag = App and tag = Slytherin) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-8
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Web
              operator: Exists
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Gryffindor) dst: (tag = App and tag = Gryffindor) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-9
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Hufflepuff) dst: (tag = App and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-10
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Web and tag = Slytherin) dst: (tag = App and tag = Slytherin) conn: All Connections'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-11
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__Web
                      operator: Exists
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Gryffindor) dst: (tag = DB and tag = Gryffindor) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-12
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: Exists
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Hufflepuff) dst: (tag = DB and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-13
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: Exists
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Slytherin) dst: (tag = DB and tag = Slytherin) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-14
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: Exists
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__App
              operator: Exists
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Gryffindor) dst: (tag = DB and tag = Gryffindor) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-15
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__DB
              operator: Exists
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Hufflepuff) dst: (tag = DB and tag = Hufflepuff) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-16
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__DB
              operator: Exists
            - key: tag__Hufflepuff
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = App and tag = Slytherin) dst: (tag = DB and tag = Slytherin) conn: All Connections'
        nsx-id: "9197"
    creationTimestamp: null
    name: policy-17
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: tag__App
                      operator: Exists
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__DB
              operator: Exists
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
